--- a/style/main.css
+++ b/style/main.css
@@ -970,3 +970,39 @@ footer {
     font-size: 16px;
     font-weight: 700;
 }
+
+.not-found-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.not-found-title {
+    font-size: 6rem;
+    font-weight: bold;
+    color: #343a40;
+}
+
+.not-found-message {
+    font-size: 1.5rem;
+    margin: 20px 0;
+    color: #6c757d;
+}
+
+.not-found-link {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: #000000;
+    background-color: #ffffff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.not-found-link:hover {
+    background-color: #0056b3;
+}
